--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
         integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
     <link rel="stylesheet" href="css/style.css" />
     <title>Administración de ciclistas</title>
-
 </head>
 
 <body>
@@ -129,16 +128,18 @@
                         <div class="tab-pane fade show active p-3" id="tab1" role="tabpanel" aria-labelledby="tab1-tab">
                             <div class="row">
                                 <div class="col-md-12">
-                                    <form class="d-flex mt-2">
+                                    <form class="d-flex mt-2" id="frm-adicionar-ciclista">
                                         <input class="form-control me-2" type="search" placeholder="Buscar"
-                                            aria-label="Search">
-                                        <button class="btn btn-outline-primary" type="submit"><span
-                                                class="material-icons md-dark">search</span></button>
+                                            id="txt-buscar-ciclistas" aria-label="Search">
+                                        <button class="btn btn-outline-primary" type="submit"
+                                            id="btn_adicionar_ciclista" data-bs-toggle="modal"
+                                            data-bs-target="#modalAdicionarCiclista"><i
+                                                class="bi bi-rainbow"></i></button>
                                     </form>
                                 </div>
                                 <div class="col-md-12 mt-3">
                                     <div class="table-responsive">
-                                        <table class="table table-bordered">
+                                        <table class="table table-bordered" id="tbl-ciclistas">
                                             <thead>
                                                 <tr>
                                                     <th>#</th>
@@ -178,13 +179,85 @@
         <footer>
             <div class="row">
                 <div class="col-12 text-center p-2">
-                    Copyright © 2021 | Medellín - Antioquía, Colombia | <a href=""><i class="fab fa-github"></i></a> |
+                    Copyright © 2021 | Bogotá D.C., Colombia | <a href=""><i class="fab fa-github"></i></a> |
                     <a href="#"><i class="fab fa-facebook"></i></a> | <a href="#"><i
                             class="fab fa-twitter-square"></i></a>
                 </div>
             </div>
         </footer>
     </section>
+    <form id="frm-ciclista" class="needs-validation" novalidate>
+        <div class="modal fade" id="modalAdicionarCiclista" tabindex="-1">
+            <div class="modal-dialog modal-lg">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title">Adicionar Ciclista</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="card">
+                            <h5 class="card-header">Datos del corredor</h5>
+                            <div class="card-body">
+                                <div class="row">
+                                    <div class="col-6">
+                                        <label for="nombre_ciclista" class="form-label">Nombre *</label>
+                                        <input type="text" class="form-control" name="nombre_ciclista"
+                                            id="nombre_ciclista" required maxlength="30">
+                                        <div class="invalid-feedback">
+                                            Error validando nombre
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card mt-3">
+                            <h5 class="card-header">Registro de tiempos</h5>
+                            <div class="card-body">
+                                <div class="row">
+                                    <div class="col-6">
+                                        <label for="carrera_1_corredor" class="form-label">Carrera 1(en min)*</label>
+                                        <input type="number" step="any" class="form-control" name="carrera_1_corredor"
+                                            id="carrera_1_corredor" required min="5" max="10">
+                                        <div class="invalid-feedback">
+                                            Error validando Carrera 1
+                                        </div>
+                                    </div>
+                                    <div class="col-6">
+                                        <label for="carrera_2_corredor" class="form-label">Carrera 2(en min)*</label>
+                                        <input type="number" step="any" class="form-control" name="carrera_2_corredor"
+                                            id="carrera_2_corredor" required>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-6">
+                                        <label for="carrera_3_corredor" class="form-label">Carrera 3(en min)*</label>
+                                        <input type="number" step="any" class="form-control" name="carrera_3_corredor"
+                                            id="carrera_3_corredor" required>
+                                    </div>
+                                    <div class="col-6">
+                                        <label for="carrera_4_corredor" class="form-label">Carrera 4(en min)*</label>
+                                        <input type="number" step="any" class="form-control" name="carrera_4_corredor"
+                                            id="carrera_4_corredor" required>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-6">
+                                        <label for="carrera_5_corredor" class="form-label">Carrera 5(en min)*</label>
+                                        <input type="number" step="any" class="form-control" name="carrera_5_corredor"
+                                            id="carrera_5_corredor" required>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Salir</button>
+                        <button type="submit" class="btn btn-primary" id="btn-guardar-ciclista">Guardar cambios</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </form>
     <div id="demo"></div>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
